tests/NormalTests/paczka1/fuzzy1/45755420.err
Error in line 4: S509 S112 0,3
Error in line 8: andGrdy S112 30,9
Error in line 9: andGrdy S509 72,9
Error in line 34: andGrdy A990 80,0
Error in line 33: vifF76MGdg S112 8,4
